# anime_downloader

./: .gitignore  Cargo.toml  LICENSE  README.md  cookies.json  data.json
.github/workflows/: publish.yml  rust.yml
src/: main.rs
src/common/: anime.rs  download.rs  errors.rs  mod.rs  quality.rs  utils.rs
src/ddos/: ddos_guard_net.rs  mod.rs
src/download/: aria2c.rs  mod.rs
src/sites/: animepahe.rs  mod.rs
